--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -44,26 +44,6 @@
     border-radius: .3rem;
     width: fit-content;
 }
-.card-tag-title{
-    font-size: .85rem;
-    font-weight: 500;
-    color: var(--textgrey);
-}
-.card-tag-title::before{
-    display: inline-block;
-    content: " ";
-    height: 10px;
-    width: 10px;
-    background-color: var(--textgrey);
-    border-radius: 50%;
-    margin-right: .2rem;
-}
-
-
-
-
-
-
 .material-symbols-outlined{
     color:grey;
 }
@@ -104,7 +84,17 @@
     height:15%;
    border-radius: 50%;
 }
-
+.card-tag-btn{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 5px;
+    padding:3%;
+    margin-left: 2%;
+    margin-top: 3%;
+    cursor: pointer;
+    border:none;
+    color:grey;
+    width:150px;
+}
 
 
 
